@@ -380,17 +380,17 @@ extern int set_uacl  A_((attribute *attr,attribute *new, enum batch_op));
 extern int set_unkn A_((attribute *attr,attribute *new, enum batch_op));
 extern int set_depend A_((attribute *attr,attribute *new, enum batch_op));
 
-extern int   comp_b A_((attribute *attr, attribute *with));
-extern int   comp_c A_((attribute *attr, attribute *with));
-extern int   comp_l A_((attribute *attr, attribute *with));
-extern int   comp_ll A_((attribute *attr, attribute *with));
-extern int   comp_size  A_((attribute *attr, attribute *with));
-extern int   comp_str  A_((attribute *attr, attribute *with));
-extern int   comp_arst A_((attribute *attr, attribute *with));
-extern int   comp_resc A_((attribute *attr, attribute *with));
-extern int   comp_unkn A_((attribute *attr, attribute *with));
-extern int   comp_depend A_((attribute *attr, attribute *with));
-extern int   comp_hold A_((attribute *attr, attribute *with));
+extern int comp_b A_((attribute *attr, attribute *with));
+extern int comp_c A_((attribute *attr, attribute *with));
+extern int comp_l A_((attribute *attr, attribute *with));
+extern int comp_ll A_((attribute *attr, attribute *with));
+extern int comp_size  A_((attribute *attr, attribute *with));
+extern int comp_str  A_((attribute *attr, attribute *with));
+extern int comp_arst A_((attribute *attr, attribute *with));
+extern int comp_resc A_((attribute *,attribute *,int,char *));
+extern int comp_unkn A_((attribute *attr, attribute *with));
+extern int comp_depend A_((attribute *attr, attribute *with));
+extern int comp_hold A_((attribute *attr, attribute *with));
 
 extern int action_depend A_((attribute *attr, void *pobj, int mode));
 
