@@ -868,9 +868,11 @@ static void chk_svr_resc_limit(
         else if (rc < 0)
           {
           if ((EMsg != NULL) && (EMsg[0] == '\0'))
-            sprintf(EMsg,"cannot satisfy %s %s requirement",
+            {
+            sprintf(EMsg,"cannot satisfy %s max %s requirement",
               (LimitIsFromQueue == 1) ? "queue" : "server",
               (LimitName != NULL) ? LimitName : "resource");
+            }
 
           comp_resc_lt++;
           }
@@ -946,10 +948,10 @@ int chk_resc_limits(
 
   /* first check against queue minimum */
 
-  if ((comp_resc(&pque->qu_attr[QA_ATR_ResourceMin],pattr) == -1) ||
+  if ((comp_resc(&pque->qu_attr[QA_ATR_ResourceMin],pattr,1,EMsg) == -1) ||
       (comp_resc_gt > 0))
     {
-    if (EMsg != NULL)
+    if ((EMsg != NULL) && (EMsg[0] == '\0'))
       strcpy(EMsg,"job violates queue min resource limits");
 
     return(PBSE_EXCQRESC);
@@ -1110,9 +1112,8 @@ int svr_chkque(
             }
           }  /* END while (grp) */
 
-          endgrent();
-
-        }    /* END if (rc == 0) && AclGroupSloppy */
+        endgrent();
+        }    /* END if (rc == 0) && AclGroupSloppy...) */
 
       if (rc == 0)
         {
